Start TODO for joe-3.3...

--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 
-Short (infinite) list for 3.2:
+Short (infinite) list for 3.3:
+
+- mouse should be able to resize windows
+- dynamic spell checking with highlighter- there should be a way
+- grep and grep-find commands
 
 - - - -
 
