--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+JOE 3.3
+
 JOE 3.2
 
 - A Perforce SCM "p4 edit" macro has been supplied (along with the hooks
@@ -5,7 +7,7 @@ JOE 3.2
   read-only file, JOE runs "p4 edit".  (look in joerc file to enable the
   macro).
 
-- Hex edit mode: joe -hex /dev/hda,0,1024
+- Hex edit mode has been added.  For example: joe -hex /dev/hda,0,1024
 
 - New '-break_links' option causes JOE to delete before writing files, to
   break hard links.  Useful for 'arch' SCM.
