fix some resize bugs

--- a/TODO
+++ b/TODO
@@ -3,6 +3,10 @@ Short (infinite) list for 3.3:
 
 - dynamic spell checking with highlighter- there should be a way
 - grep and grep-find commands
+- select word wrap for news articles ("article" in file name)
+- scroll menus with mouse
+- mouse when in hex mode, line numbering mode
+- bracketed paste support
 
 - - - -
 
