--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 28 02:17:37 EST 2005
+
+	Apply (and fix) background color patch
+
 Sat Mar 26 09:56:23 EST 2005
 
 	Fix some window resize bugs
