--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 29 19:19:42 EST 2005
+
+	Fix some cut & paste bugs.
+
 Mon Mar 28 02:17:37 EST 2005
 
 	Apply (and fix) background color patch
