--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 30 23:47:00 EST 2005
+
+	New xterm-patch fixes i18n problems with mouse.
+
 Tue Mar 29 19:19:42 EST 2005
 
 	Fix some cut & paste bugs.
