Add search prompting for better jpico

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  1 00:14:58 EST 2005
+
+	Improve jpico: add -search_prompting option.
+
 Wed Mar 30 23:47:00 EST 2005
 
 	New xterm-patch fixes i18n problems with mouse.
