--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Fri Apr  1 00:14:58 EST 2005
 
 	Improve jpico: add -search_prompting option.
 
+	Fix ^X ^S bug (was using vsdup() on a non-dynamic string).
+
 Wed Mar 30 23:47:00 EST 2005
 
 	New xterm-patch fixes i18n problems with mouse.
