--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr  6 12:39:15 EDT 2005
+
+	New xterm-patch: base64 encode the data to avoid security hole
+
 Fri Apr  1 00:14:58 EST 2005
 
 	Improve jpico: add -search_prompting option.
