--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  7 18:25:07 EDT 2005
+
+	Add sql syntax file
+
 Wed Apr  6 12:39:15 EDT 2005
 
 	New xterm-patch: base64 encode the data to avoid security hole
