--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Fri Apr  8 10:27:24 EDT 2005
 
 	Add awk syntax file
 	Use c syntax file for yacc
+	Add cobol syntax file
 
 Thu Apr  7 18:25:07 EDT 2005
 
