--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Thu Apr 21 15:46:09 EDT 2005
+
+	Add some grep find support:
+		ESC g   execute grep
+		ESC SP  jump to "file line:"
+
+        (jump should use other window)
+
+	Add xterm-patch to make dist.
+
 Sun Apr 17 12:05:32 EDT 2005
 
 	Scripts for Cygwin.
