--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Fri Apr 22 00:47:55 EDT 2005
 
 	Don't use nl_langinfo(CODESET) in Cygwin.
 
+	Add Ada syntax file
+
 Thu Apr 21 15:46:09 EDT 2005
 
 	Add some grep find support:
