--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+- "Bufed" (prompt for a buffer to edit), works like other file prompt
+  commands: it's a real prompt with history and completion.
+
+- Automatic horizontal left scroll jumps by 5-10 columns.
+
 - New sytnax files: troff
 
 JOE 3.3
