show properly escaped previous search string

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Mon Feb 27 01:34:37 EST 2006
 
 	Fix perl highlighter bug.  $q not handled properly.
+	Show properly escaped previous search string
 
 Thu Feb 23 13:41:20 EST 2006
 
