--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 28 18:50:32 EST 2006
+
+	Fix bug where 'complete' command core dumps.
+	Fix bug where '.' alone with c highlighting enabled core dumps.
+
 Mon Feb 27 01:34:37 EST 2006
 
 	Fix perl highlighter bug.  $q not handled properly.
