--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Sat Mar  4 21:59:22 EST 2006
 
 	Fix bug with -assume_256color: missing ; in escape sequence
 
+	Fix .php variable highlighting
+
 Wed Mar  1 10:19:49 EST 2006
 
 	Match how Thomas Dickey implemented the xterm-paste patch.
