--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@ Sat Mar  4 21:59:22 EST 2006
 
 	Added new "-menu_above" option.
 
+	Fix pgup/pgdn to work with menu_above.
+
 Wed Mar  1 10:19:49 EST 2006
 
 	Match how Thomas Dickey implemented the xterm-paste patch.
