--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ Fri May  5 10:24:33 EDT 2006
 
 	Allow escape sequences in syntax highlight strings.
 
+	Fix ^L so that it works the first time.
+
 Wed May  3 21:10:21 EDT 2006
 
 	Better handling of 'joe -'
