--- a/NEWS
+++ b/NEWS
@@ -41,7 +41,7 @@
 
 - Automatic horizontal left scroll jumps by 5-10 columns.
 
-- New sytnax files: troff
+- New sytnax files: troff, Haskell, Cadance SKILL
 
 JOE 3.3
 
