Add rexx.  Take advantage of highlighter subroutines.

--- a/NEWS
+++ b/NEWS
@@ -45,7 +45,7 @@
 
 - Automatic horizontal left scroll jumps by 5-10 columns.
 
-- New sytnax files: troff, Haskell, Cadance SKILL
+- New sytnax files: troff, Haskell, Cadance SKILL, REXX
 
 JOE 3.3
 
