--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri May 19 13:29:11 EDT 2006
+
+	Add REX.  Fix highlighter subroutine bugs.
+
+	Update php, html, css and java highlighters to take
+	advantage of subroutines.
+
 Tue May 16 01:31:16 EDT 2006
 
 	Get rid of last type punning warning.
