Highlighter for ruby

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ Fri May 19 13:29:11 EDT 2006
 
 	Heredoc support for PHP
 
+	Add Ruby
+
 Tue May 16 01:31:16 EDT 2006
 
 	Get rid of last type punning warning.
