--- a/NEWS
+++ b/NEWS
@@ -45,7 +45,7 @@
 
 - Automatic horizontal left scroll jumps by 5-10 columns.
 
-- New sytnax files: troff, Haskell, Cadance SKILL, REXX
+- New sytnax files: troff, Haskell, Cadance SKILL, REXX, LUA, RUBY
 
 JOE 3.3
 
