--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
-querysave problems?
+gettext(): figure out ./configure
+
+=-=-=-=-=
+
+querysave problems?  it doesn't catch all files.
 
 =-=-=-=-=
 
